corrected a migration error + added first tests!

--- a/build.properties
+++ b/build.properties
@@ -5,6 +5,6 @@ bin.includes = META-INF/,\
                plugin.xml,\
                lib/akuhn-util-r28011.jar,\
                lib/fame.jar,\
-               lib/famix-220807_1658.jar,\
-               lib/verveine.core-220807_1658.jar,\
-               bin/
+               bin/,\
+               lib/famix-220809_1247.jar,\
+               lib/verveine.core-220809_1247.jar
