--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="tests"/>
+	<classpathentry exported="true" kind="lib" path="lib/verveine.core-220809_1247.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
 			<attribute name="module" value="true"/>
@@ -9,7 +11,6 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="lib" path="lib/fame.jar"/>
 	<classpathentry kind="lib" path="lib/akuhn-util-r28011.jar"/>
-	<classpathentry kind="lib" path="lib/famix-220807_1658.jar" sourcepath="/verveine.core"/>
-	<classpathentry kind="lib" path="lib/verveine.core-220807_1658.jar" sourcepath="/verveine.core"/>
+	<classpathentry kind="lib" path="lib/famix-220809_1247.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
