cherry pick: corrected a migration error + added first tests!

--- a/build.properties
+++ b/build.properties
@@ -3,8 +3,7 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                lib/akuhn-util-r28011.jar,\
-               lib/verveine.core.jar,\
+               lib/fame.jar,\
+               bin/,\
                lib/famix.jar,\
-               lib/fast.jar,\
-               lib/fame.jar
-src.excludes = test/
+               lib/verveine.core.jar
