--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/fame.jar" sourcepath="/Fame"/>
 	<classpathentry exported="true" kind="lib" path="lib/akuhn-util-r28011.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/famix.jar" sourcepath="/verveine.core"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
