--- a/.classpath
+++ b/.classpath
@@ -2,16 +2,16 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="tests"/>
-	<classpathentry exported="true" kind="lib" path="lib/verveine.core.jar" sourcepath="/verveine.core"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry exported="true" kind="lib" path="lib/fame.jar" sourcepath="/Fame"/>
-	<classpathentry exported="true" kind="lib" path="lib/akuhn-util-r28011.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/famix.jar" sourcepath="/verveine.core"/>
+	<classpathentry kind="lib" path="lib/fame.jar" sourcepath="/Fame"/>
+	<classpathentry kind="lib" path="lib/akuhn-util-r28011.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="lib/famix.jar"/>
+	<classpathentry kind="lib" path="lib/verveine.core.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
