started to make tests pass

--- a/build.properties
+++ b/build.properties
@@ -1,10 +1,11 @@
-source.. = src/
+source.. = src/,\
+           gen/,\
+           resources/,\
+           tests
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               src/lib/akuhn-util-r28011.jar,\
-               src/lib/fame.jar,\
-               bin/,\
-               src/lib/famix.jar,\
-               src/lib/verveine.core.jar
+               lib/akuhn-util-r28011.jar,\
+               lib/fame.jar,\
+               bin/
